--- a/BanVeDiTourDuLich/Views/Shared/_Layout.cshtml
+++ b/BanVeDiTourDuLich/Views/Shared/_Layout.cshtml
@@ -57,6 +57,9 @@
             position: relative;
             border-radius: 5px;
         }
+        .stripe-button-el {
+            display: none !important
+        }
 
         .cart::after {
             content: "@soHang";
