--- a/BanVeDiTourDuLich/Views/Admin/Index.cshtml
+++ b/BanVeDiTourDuLich/Views/Admin/Index.cshtml
@@ -1,6 +1,11 @@
-﻿@{
+﻿@using BanVeDiTourDuLich.Controllers
+@{
     ViewBag.Title = "IndexAdmin";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+    int count = HomeController.Count;
+    DataContext context = new DataContext();
+    int user = context.KhachHangs.Count();
+    int ve = context.Ves.Count();
 }
 
 <div class="content-wrapper">
@@ -34,7 +39,7 @@
                     <!-- small box -->
                     <div class="small-box bg-info">
                         <div class="inner">
-                            <h3>150</h3>
+                            <h3>@ve</h3>
 
                             <p>Số vé đặt mới</p>
                         </div>
@@ -62,7 +67,7 @@
                     <!-- small box -->
                     <div class="small-box bg-warning">
                         <div class="inner">
-                            <h3>44</h3>
+                            <h3>@user</h3>
 
                             <p>Số người dùng đăng kí mới</p>
                         </div>
@@ -76,7 +81,7 @@
                     <!-- small box -->
                     <div class="small-box bg-danger">
                         <div class="inner">
-                            <h3>65</h3>
+                            <h3>@count</h3>
 
                             <p>Số người vào trang web</p>
                         </div>
@@ -170,93 +175,13 @@
                             <!-- Conversations are loaded here -->
                             <div class="direct-chat-messages" id="#">
                                 <!-- Message. Default to the left -->
-                                <div class="direct-chat-msg">
-                                    <div class="direct-chat-infos clearfix">
-                                        <span class="direct-chat-name float-left">Alexander Pierce</span>
-                                        <span class="direct-chat-timestamp float-right">23 Jan 2:00 pm</span>
-                                    </div>
-                                    <!-- /.direct-chat-infos -->
-                                    <img class="direct-chat-img"
-                                         src="/Content/dist/img/user1-128x128.jpg"
-                                         alt="message user image" />
-                                    <!-- /.direct-chat-img -->
-                                    <div class="direct-chat-text">
-                                        Is this template really for free? That's unbelievable!
-                                    </div>
-                                    <!-- /.direct-chat-text -->
-                                </div>
-                                <!-- /.direct-chat-msg -->
-                                <!-- Message to the right -->
-                                <div class="direct-chat-msg right">
-                                    <div class="direct-chat-infos clearfix">
-                                        <span class="direct-chat-name float-right">Sarah Bullock</span>
-                                        <span class="direct-chat-timestamp float-left">23 Jan 2:05 pm</span>
-                                    </div>
-                                    <!-- /.direct-chat-infos -->
-                                    <img class="direct-chat-img"
-                                         src="/Content/dist/img/user3-128x128.jpg"
-                                         alt="message user image" />
-                                    <!-- /.direct-chat-img -->
-                                    <div class="direct-chat-text">
-                                        You better believe it!
-                                    </div>
-                                    <!-- /.direct-chat-text -->
-                                </div>
-                                <!-- /.direct-chat-msg -->
-                                <!-- Message. Default to the left -->
-                                <div class="direct-chat-msg">
-                                    <div class="direct-chat-infos clearfix">
-                                        <span class="direct-chat-name float-left">Alexander Pierce</span>
-                                        <span class="direct-chat-timestamp float-right">23 Jan 5:37 pm</span>
-                                    </div>
-                                    <!-- /.direct-chat-infos -->
-                                    <img class="direct-chat-img"
-                                         src="/Content/dist/img/user1-128x128.jpg"
-                                         alt="message user image" />
-                                    <!-- /.direct-chat-img -->
-                                    <div class="direct-chat-text">
-                                        Working with AdminLTE on a great new app! Wanna join?
-                                    </div>
-                                    <!-- /.direct-chat-text -->
-                                </div>
-                                <!-- /.direct-chat-msg -->
-                                <!-- Message to the right -->
-                                <div class="direct-chat-msg right">
-                                    <div class="direct-chat-infos clearfix">
-                                        <span class="direct-chat-name float-right">Sarah Bullock</span>
-                                        <span class="direct-chat-timestamp float-left">23 Jan 6:10 pm</span>
-                                    </div>
-                                    <!-- /.direct-chat-infos -->
-                                    <img class="direct-chat-img"
-                                         src="/Content/dist/img/user3-128x128.jpg"
-                                         alt="message user image" />
-                                    <!-- /.direct-chat-img -->
-                                    <div class="direct-chat-text">I would love to.</div>
-                                    <!-- /.direct-chat-text -->
-                                </div>
+                               
                                 <!-- /.direct-chat-msg -->
                             </div>
                             <!--/.direct-chat-messages-->
                             <!-- Contacts are loaded here -->
                             <div class="direct-chat-contacts index-20">
                                 <ul class="contacts-list" id="#">
-                                    <li>
-                                        <a href="#">
-                                            <img class="contacts-list-img"
-                                                 src="/Content/dist/img/user1-128x128.jpg"
-                                                 alt="User Avatar" />
-
-                                            <div class="contacts-list-info">
-                                                <span class="contacts-list-name">
-                                                    Count Dracula
-                                                    <small class="contacts-list-date float-right">2/28/2015</small>
-                                                </span>
-                                                <span class="contacts-list-msg">How have you been? I was...</span>
-                                            </div>
-                                            <!-- /.contacts-list-info -->
-                                        </a>
-                                    </li>
-                                    <!-- End Contact Item -->
                                 </ul>
                                 <!-- /.contacts-list -->
                             </div>
