--- a/BanVeDiTourDuLich/Views/Tour/TimKiemTour.cshtml
+++ b/BanVeDiTourDuLich/Views/Tour/TimKiemTour.cshtml
@@ -20,7 +20,9 @@
                     </div>
                     @*  Search Result Component *@
                     @foreach (var destination in @Model.CacTour)
+
                     {
+                        int i = 0;
                         <div class="col-lg-1 col-md-1 hidden-sm hidden-xs">
                             <div class="frame-day-scroll" id="tagMax318">
                                 <div class="text-center">
@@ -36,7 +38,7 @@
                                 <div class="row">
                                     <div class="col-xs-12">
                                         <div class="tour-name">
-                                            <a href="/Tour/ChiTietChuyenDi/@destination.MaTour" title=" Huế - Đà Nẵng - Bà Nà - Hội An ( Khách sạn 4 sao)"><h3> Huế - Đà Nẵng - Bà Nà - Hội An ( Khách sạn 4 sao)</h3></a>
+                                            <a href="/Tour/ChiTietChuyenDi/@destination.MaTour" title=" Huế - Đà Nẵng - Bà Nà - Hội An ( Khách sạn 4 sao)"><h3>Điểm đến: @destination.TenDiaDiem</h3></a>
                                         </div>
                                     </div>
                                     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
@@ -47,7 +49,7 @@
                                                 </div>
                                             </div>
                                             <a href="/Tour/ChiTietChuyenDi/@destination.MaTour" title=" Huế - Đà Nẵng - Bà Nà - Hội An ( Khách sạn 4 sao)">
-                                            <img src="@destination.DuongDanAnh" class="img-responsive pic-lt" alt=" Huế - Đà Nẵng - Bà Nà - Hội An ( Khách sạn 4 sao)">
+                                                <img src="@destination.DuongDanAnh" class="img-responsive pic-lt" alt=" Huế - Đà Nẵng - Bà Nà - Hội An ( Khách sạn 4 sao)">
                                             </a>
                                         </div>
                                     </div>
@@ -74,7 +76,7 @@
                                                 </div>
                                                 <div class="col-md-7 col-sm-7 col-xs-12 mg-bot10">
                                                     <div class="f-left l"><img src="/Content/ThemeHe/i-code.png" alt="code"></div>
-                                                    <div class="f-left r">Mã tour: NDHAN502-233-131120VN-U</div>
+                                                    <div class="f-left r">Mã tour: @destination.MaTour</div>
                                                     <div class="clear"></div>
                                                 </div>
                                                 <div class="col-md-5 col-sm-5 col-xs-12 mg-bot10">
@@ -85,7 +87,7 @@
                                                     <div class="clear"></div>
                                                 </div>
                                                 <div class="col-md-7 col-sm-7 col-xs-12 mg-bot10">
-                                                    <div class="f-left l"><img src="Content/ThemeHe/i-date.png" alt="date"></div>
+                                                    <div class="f-left l"><img src="/Content/ThemeHe/i-date.png" alt="date"></div>
                                                     <div class="f-left r">Ngày đi: <span class="font500">@destination.ThoiGianDi.</span></div>
                                                     <div class="clear"></div>
                                                 </div>
@@ -107,17 +109,21 @@
                                                     <div class="f-left r">Số ngày: <span class="font500">4</span></div>
                                                     <div class="clear"></div>
                                                 </div>
+
+
                                                 <div class="col-md-12 col-sm-12 col-xs-12 mg-bot10">
                                                     <div class="f-left l"><img src="/Content/ThemeHe/i-dep.png"></div>
-                                                    <div class="f-left r">Nơi khởi hành: <span class="font500">Hà Nội</span></div>
+                                                    <div class="f-left r">Nơi khởi hành:Thành phố Hà Nội <span class="font500"></span></div>
                                                     <div class="clear"></div>
                                                 </div>
+
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
+                        i++;
                     }
                 </div>
             </div>
