--- a/BanVeDiTourDuLich/Views/Tour/TimKiemTour.cshtml
+++ b/BanVeDiTourDuLich/Views/Tour/TimKiemTour.cshtml
@@ -12,10 +12,6 @@
                 <div class="row">
                     <div class="col-xs-12 mg-bot15">
                         <div style="padding: 12px 10px;background-color:#f1f1f1;line-height:18px;">
-                            <span class="dep-place">
-                                <i class="fas fa-map-marker-alt"></i>&nbsp;&nbsp;Hà Nội
-                            </span>
-                            <span>Có 26 tour khởi hành vào thời gian bạn chọn</span>
                         </div>
                     </div>
                     @*  Search Result Component *@
@@ -38,7 +34,7 @@
                                 <div class="row">
                                     <div class="col-xs-12">
                                         <div class="tour-name">
-                                            <a href="/Tour/ChiTietChuyenDi/@destination.MaTour" title=" Huế - Đà Nẵng - Bà Nà - Hội An ( Khách sạn 4 sao)"><h3>Điểm đến: @destination.TenDiaDiem</h3></a>
+                                            <a href="/Tour/ChiTietChuyenDi/@destination.MaTour" title=" Huế - Đà Nẵng - Bà Nà - Hội An ( Khách sạn 4 sao)"><h3>Điểm đến: @destination.DiaDiem.TenDiaDiem</h3></a>
                                         </div>
                                     </div>
                                     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
