--- a/BanVeDiTourDuLich/Views/User/Index.cshtml
+++ b/BanVeDiTourDuLich/Views/User/Index.cshtml
@@ -179,12 +179,7 @@
 
                 <form action="/User/Index/" method="post">
                     <div class="input-group mb-3">
-                        <input type="text" class="form-control" placeholder="Email" name="TaiKhoanDangNhap"/>
-                        <div class="input-group-append">
-                            <div class="input-group-text">
-                                <span class="fas fa-envelope"></span>
-                            </div>
-                        </div>
+                        <input type="text" class="form-control" placeholder="Tên đăng nhập" name="TaiKhoanDangNhap"/>
                     </div>
                     <div class="input-group mb-3">
                         <input type="password"
