--- a/BanVeDiTourDuLich/Content/css/style.css
+++ b/BanVeDiTourDuLich/Content/css/style.css
@@ -43,10 +43,11 @@
 }
 
 html {
-    font-family: sans-serif;
+    font-family: sans-serif !important;
     line-height: 1.15;
     -webkit-text-size-adjust: 100%;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    font-size: 16px !important;
 }
 
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section { display: block; }
