--- a/BanVeDiTourDuLich/Views/Shared/_LayoutAdmin.cshtml
+++ b/BanVeDiTourDuLich/Views/Shared/_LayoutAdmin.cshtml
@@ -141,6 +141,13 @@
                         <p>Quản lý người dùng</p>
                     </a>
                 </li>
+
+                <li class="nav-item">
+                    <a id="#QuanLyNguoiDungLink" href="/admin/QuanLyDiaDiem" class="nav-link">
+                        <i class="nav-icon fas fas fa-users"></i>
+                        <p>Quản lý địa điểm</p>
+                    </a>
+                </li>
             </ul>
         </nav>
         <!-- /.sidebar-menu -->
