--- a/BanVeDiTourDuLich/Views/Admin/ThemMoiDiaDiem.cshtml
+++ b/BanVeDiTourDuLich/Views/Admin/ThemMoiDiaDiem.cshtml
@@ -22,7 +22,7 @@
                     </div>
                     <!-- /.col-lg-12 -->
                     <div class="col-lg-7" style="padding-bottom:120px">
-                        <form action="/Admin/ThemDiaDiemMoi" method="POST" id="Recipe_add" enctype="multipart/form-data">
+                        <form action="/Admin/ThemMoiDiaDiem" method="POST" id="Recipe_add" enctype="multipart/form-data">
                             <input name="ID_congthuc" style="width:0.1px;height:0.1px;border-width:0" />
                             <div class="form-group">
                                 <label>Mã Địa điểm</label>
@@ -41,7 +41,7 @@
                                 <div class="file-upload">
                                     <button class="file-upload-btn" type="button" onclick="$('.file-upload-input').trigger( 'click' )">Chọn ảnh</button>
                                     <div class="image-upload-wrap">
-                                        <input class="file-upload-input" type="file" name="postfile" onchange="readURL(this);" accept="image/*" />
+                                        <input class="file-upload-input" type="file" name="post" onchange="readURL(this);" accept="image/*" />
                                     </div>
                                     <div class="file-upload-content">
                                         <img style="width:552px" class="file-upload-image" src="" alt="your image" />
