fix search tour

--- a/BanVeDiTourDuLich/Views/Tour/ChiTietChuyenDi.cshtml
+++ b/BanVeDiTourDuLich/Views/Tour/ChiTietChuyenDi.cshtml
@@ -13,7 +13,7 @@
         <div style="align-items: center;" class="row justify-content-center pb-4 detail-destination">
             <div class="col-md-4 ftco-animate image-box">
                 <div class="project-wrap">
-                    <a href="#" class="img" style="        background-image: url( @Model.Tour.DiaDiemDi.DuongDanAnh );
+                    <a href="#" class="img" style="background-image: url(@Model.Tour.DiaDiemDen.DuongDanAnh);
         border-radius: 6px;
         background-position: center;
 "></a>
@@ -21,7 +21,7 @@
             </div>
             <div class="motachitiet" style="flex: 0.8; font-weight: 600">
                 <div class="sec1">
-                    <span class="diadiem">Điểm đến:@Model.Tour.DiaDiemDi.TenDiaDiem</span>
+                    <span class="diadiem">Điểm đến:@Model.Tour.DiaDiemDen.TenDiaDiem</span>
                 </div>
                 <div class="sec2">
                     @*<span class="ngaykhoihanh">Khởi hành:@Model.Tour.ThoigianDi</span>*@
@@ -32,7 +32,7 @@
 
                 </div>
                 <div>
-                    <span class="noikhoihanh">Nơi khởi hành: @Model.Tour.DiaDiemDen.TenDiaDiem</span>
+                    <span class="noikhoihanh">Nơi khởi hành: @Model.Tour.DiaDiemDi.TenDiaDiem</span>
                 </div>
                 <div class="sec4">
                     <ul>
@@ -43,7 +43,7 @@
                             <span class="flaticon-king-size"></span>3
                         </li>
                         <li>
-                            <span class="flaticon-mountains"></span>Near Mountain
+                            <span class="flaticon-mountains"></span>
                         </li>
                     </ul>
                 </div>
