--- a/BanVeDiTourDuLich/Views/Home/Index.cshtml
+++ b/BanVeDiTourDuLich/Views/Home/Index.cshtml
@@ -49,7 +49,7 @@
                                         </div>
                                         <input type="text" name="diemden"
                                                class="form-control"
-                                               placeholder="Search place" />
+                                               placeholder="Tìm kiếm địa điểm" />
                                     </div>
                                 </div>
                             </div>
@@ -60,9 +60,9 @@
                                         <div class="icon">
                                             <span class="ion-ios-calendar"></span>
                                         </div>
-                                        <input type="date" name="ngaydi"
+                                        <input data-provide="datepicker"  name="ngaydi"
                                                class="form-control checkin_date"
-                                               placeholder="Check In Date" />
+                                               placeholder="Ngày Check-in" />
                                     </div>
                                 </div>
                             </div>
@@ -75,7 +75,7 @@
                                             <div class="icon">
                                                 <span class="ion-ios-arrow-down"></span>
                                             </div>
-                                            <input name="gia" id="" class="form-control"/>
+                                            <input name="gia" id="" class="form-control" placeholder="Nhập giá"/>
                                                 
                                                 
                                             
@@ -87,7 +87,7 @@
                                 <div class="form-group">
                                     <div class="form-field">
                                         <input type="submit" 
-                                               value="Search"
+                                               value="Tìm Kiếm"
                                                class="form-control btn btn-primary" />
                                     </div>
                                 </div>
