--- a/BanVeDiTourDuLich/Views/Tour/TimKiemTour.cshtml
+++ b/BanVeDiTourDuLich/Views/Tour/TimKiemTour.cshtml
@@ -34,7 +34,7 @@
                                 <div class="row">
                                     <div class="col-xs-12">
                                         <div class="tour-name">
-                                            <a href="/Tour/ChiTietChuyenDi/@destination.MaTour" title=" Huế - Đà Nẵng - Bà Nà - Hội An ( Khách sạn 4 sao)"><h3>Điểm đến: @destination.DiaDiem.TenDiaDiem</h3></a>
+                                            <a href="/Tour/ChiTietChuyenDi/@destination.MaTour"><h3>Điểm đến: @destination.DiaDiemDen.TenDiaDiem</h3></a>
                                         </div>
                                     </div>
                                     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
@@ -44,8 +44,8 @@
                                                     <div><i class="fas fa-spinner"></i>&nbsp;&nbsp;Tiêu chuẩn</div>
                                                 </div>
                                             </div>
-                                            <a href="/Tour/ChiTietChuyenDi/@destination.MaTour" title=" Huế - Đà Nẵng - Bà Nà - Hội An ( Khách sạn 4 sao)">
-                                                <img src="@destination.DuongDanAnh" class="img-responsive pic-lt" alt=" Huế - Đà Nẵng - Bà Nà - Hội An ( Khách sạn 4 sao)">
+                                            <a href="/Tour/ChiTietChuyenDi/@destination.MaTour">
+                                                <img src="@destination.DiaDiemDen.DuongDanAnh" class="img-responsive pic-lt">
                                             </a>
                                         </div>
                                     </div>
@@ -102,14 +102,14 @@
                                                 </div>
                                                 <div class="col-md-5 col-sm-5 col-xs-12">
                                                     <div class="f-left l"><img src="/Content/ThemeHe/i-calendar.png" alt="date"></div>
-                                                    <div class="f-left r">Số ngày: <span class="font500">4</span></div>
+                                                    <div class="f-left r">Số giờ đi: @destination.SoGio <span class="font500"></span></div>
                                                     <div class="clear"></div>
                                                 </div>
 
 
                                                 <div class="col-md-12 col-sm-12 col-xs-12 mg-bot10">
                                                     <div class="f-left l"><img src="/Content/ThemeHe/i-dep.png"></div>
-                                                    <div class="f-left r">Nơi khởi hành:Thành phố Hà Nội <span class="font500"></span></div>
+                                                    <div class="f-left r">@destination.DiaDiemDi.TenDiaDiem <span class="font500"></span></div>
                                                     <div class="clear"></div>
                                                 </div>
 
