Fix Search Tour

--- a/BanVeDiTourDuLich/Views/Tour/ChiTietChuyenDi.cshtml
+++ b/BanVeDiTourDuLich/Views/Tour/ChiTietChuyenDi.cshtml
@@ -748,6 +748,7 @@
         }
 
         .daterangepicker.daterangepicker_custom_class table td.available {
+            cursor: pointer;
             border: 1px #9fc43a solid;
         }
 
