--- a/BanVeDiTourDuLich/Views/Home/Index.cshtml
+++ b/BanVeDiTourDuLich/Views/Home/Index.cshtml
@@ -55,14 +55,25 @@
                             </div>
                             <div class="col-lg align-items-end">
                                 <div class="form-group">
-                                    <label for="#">Ngày check-in</label>
+                                    <label for="#">Ngày khởi hành</label>
                                     <div class="form-field">
                                         <div class="icon">
                                             <span class="ion-ios-calendar"></span>
                                         </div>
-                                        <input data-provide="datepicker"  name="ngaydi"
+                                        <input data-provide="datepicker" name="ngaydi"
                                                class="form-control checkin_date"
-                                               placeholder="Ngày Check-in" />
+                                               placeholder="Từ" />
+                                    </div>
+                                </div>
+
+                                <div class="form-group" style="margin-top: 10px">
+                                    <div class="form-field">
+                                        <div class="icon">
+                                            <span class="ion-ios-calendar"></span>
+                                        </div>
+                                        <input data-provide="datepicker" name="ngaygioihan"
+                                               class="form-control checkin_date"
+                                               placeholder="Tới" />
                                     </div>
                                 </div>
                             </div>
