--- a/BanVeDiTourDuLich/Views/Tour/TimKiemTour.cshtml
+++ b/BanVeDiTourDuLich/Views/Tour/TimKiemTour.cshtml
@@ -5,13 +5,15 @@
 }
 <link href="/Content/css/TourStyles/style.css" rel="stylesheet" />
 <link href="/Content/css/TourStyles/ThemeHe.css" rel="stylesheet" />
+<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 <div class="container n3-list-tour mg-bot40">
     <div class="row">
         <div class="list-tour" itemscope="" itemtype="http://schema.org/Place">
             <div class="list">
                 <div class="row">
                     <div class="col-xs-12 mg-bot15">
-                        <div style="padding: 12px 10px;background-color:#f1f1f1;line-height:18px;">
+                        <div style="padding: 12px 10px; background-color: #f1f1f1; line-height: 18px;">
+                            @Model.TuKhoaTimKiem
                         </div>
                     </div>
                     @*  Search Result Component *@
