--- a/BanVeDiTourDuLich/Views/User/InforUser.cshtml
+++ b/BanVeDiTourDuLich/Views/User/InforUser.cshtml
@@ -37,7 +37,7 @@
             text-align: justify;
         }
 
-        .noidungtin p { margin-bottom: 10px; }
+        .noidungtin p { margin-bottom: 30px; }
 
         .mg-bot30 { margin-bottom: 30px; }
 
@@ -128,6 +128,7 @@
             float: right;
             display: flex;
             flex-direction: column;
+            align-items: center;
         }
         .picture__image {
             width: 7rem;
@@ -137,17 +138,22 @@
         .picture__button, .picture__button:visited {
             border: none;
             padding: 0.7rem;
-            width: 100%;
             margin-top: 1rem;
             background: orange;
             border-radius: 10px;
             color: white;
             margin-left: auto;
             margin-right: auto;
+            width: 50%;
         }
 
         .modal {
             top: 25%;
+        }
+
+        #upload {
+            display: flex;
+            flex-direction: column;
         }
         </style>
 
@@ -223,7 +229,10 @@
                         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12 noidungtin">
                             <div class="picture-box">
                                 <img class="picture__image" src="@Model.DuongDanAnh" />
-                                <button class="picture__button">Đổi ảnh cá nhân</button>
+                                <form id="upload" enctype="multipart/form-data" action="@Url.Action("UploadFile", "User")" method="POST">
+                                    <input type="file" name="fileUpload" id="fileUpload" size="23" />
+                                    <button class="picture__button">Đổi ảnh cá nhân</button>
+                                </form>
                             </div>
                             <p>
                                 <strong style="color: #1583e0 !important; text-transform: uppercase;">I. Thông tin tài khoản</strong>
@@ -262,8 +271,7 @@
                             <p>
                                 <strong style="color: #1583e0 !important; text-transform: uppercase;">II. Thông tin khách hàng</strong>
                             </p>
-                            <form action="/User/InforUser" enctype="multipart/form-data" id="frm" method="get" name="frm" novalidate="novalidate">
-                                <input name="__RequestVerificationToken" type="hidden" value="9CBTQtNWmrTcsI4bjPKuzQWtA__uVa6I5UQeoTdowMjhPO_fT0NlvY58gEduOz7Pe272oHzBKuhYJZZvfYttrnESpSMgTDJyBdlMmz4N2kJtku7ZwvWjOECW3Bec_2U50">
+                            <form action="/User/UpdateCustomerInformation" enctype="multipart/form-data" id="frm" method="post" name="frm" novalidate="novalidate">
                                 <div class="row mg-bot5">
                                     <div class="col-md-2 col-sm-2 col-xs-4">
                                         <label>Họ tên <span style="color: red">(*)</span>:</label>
@@ -317,7 +325,7 @@
                                 </div>
                                 <div class="row mg-bot30">
                                     <div class="col-xs-12 text-right">
-                                        <button id="btCapNhat" type="button" class="btn btn-md btn-default">Cập nhật&nbsp;&nbsp;<i class="fa fa-save"></i></button>
+                                        <button id="btCapNhat" type="submit" class="btn btn-md btn-default">Cập nhật&nbsp;&nbsp;<i class="fa fa-save"></i></button>
                                     </div>
                                 </div>
                             </form>
@@ -398,26 +406,83 @@
             }
         }
 
+
+        $('#frmPass').submit(function(e) {
+            e.preventDefault();
+            var form = $(this);
+            var url = form.attr('action');
+            console.log(url);
+            $.ajax({
+                type: "POST",
+                url: url,
+                data: form.serialize(),
+                success: function ({ msg }) {
+                    alert(msg);
+                    $('#btnClose').click();
+                },
+                error: function (response) {
+                    alert(response.responseJSON.msg);
+                }
+            })
+        });
+
         $('#btnCapNhatMatKhau').click(() => {
-            $('#frmPass').submit(function(e) {
-                e.preventDefault();
-                var form = $(this);
-                var url = form.attr('action');
-                console.log(url);
-                $.ajax({
-                    type: "POST",
-                    url: url,
-                    data: form.serialize(),
-                    success: function ({ msg }) {
-                        alert(msg);
-                        $('#btnClose').click();
-                    },
-                    error: function({ msg }) {
-                        alert(msg);
-                    }
-                })
-            });
             $('#frmPass').submit();
-        })
+        });
+
+
+        $('#upload').submit(function(e) {
+            e.preventDefault(); // stop the standard form submission
+
+            $.ajax({
+                url: this.action,
+                type: this.method,
+                data: new FormData(this),
+                cache: false,
+                contentType: false,
+                processData: false,
+                success: function (data) {
+                    alert(data.msg);
+                },
+                error: function(xhr, error, status) {
+                    alert(error);
+                }
+            });
+        });
+
+        function readURL(input) {
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+    
+                reader.onload = function(e) {
+                    $('.picture__image').attr('src', e.target.result);
+                }
+                reader.readAsDataURL(input.files[0]); // convert to base64 string
+            }
+        }
+
+        $("#fileUpload").change(function() {
+            readURL(this);
+        });
+
+
+        $('#frm').submit(function (e) {
+            e.preventDefault();
+            var form = $(this);
+            var url = form.attr('action');
+            console.log(url);
+            $.ajax({
+                type: "POST",
+                url: url,
+                data: form.serialize(),
+                success: function ({ msg }) {
+                    alert(msg);
+                },
+                error: function (response) {
+                    alert(response.responseJSON.msg);
+                }
+            })
+        });
+
     </script>
 }
